--- a/subpagina_jequiti/Colonia.html
+++ b/subpagina_jequiti/Colonia.html
@@ -7,6 +7,8 @@
     <title>Colonia - Jequiti</title>
 </head>
 <body>
+    <p>* em breve iremos adicionar mais produtos</p>
+    
     <h2>Colônia</h2>
     <div id="conteiner">
         <div >
