--- a/subpaginas_avon/Desodorante.html
+++ b/subpaginas_avon/Desodorante.html
@@ -7,6 +7,8 @@
     <title>Desodorante & Antitranspirante</title>
 </head>
 <body>
+    <p>* em breve iremos adicionar mais produtos</p>
+    
     <div id="conteiner">
         
         <div>
