--- a/avon.html
+++ b/avon.html
@@ -14,8 +14,8 @@
             <div id="boxFecharMenu"><img src="https://cdn-icons-png.flaticon.com/512/7693/7693513.png" width="20%" onclick="menuClose()"></div>
             <a href="./avon.html">Início</a>
             <a href="./subpaginas_avon/Colonia.html">Colonia</a>
-           <!-- <a href="./subpaginas_avon/Desodorante.html">Desodorantes</a>
-            <a href="">Bijuterias</a>-->
+           <!-- <a href="./subpaginas_avon/Desodorante.html">Desodorantes</a>-->
+            <a href="./subpaginas_avon/maqui_acess.html">Maquiagem e Acessórios</a>
         </div>
         
         <h1>Avon Cosméticos</h1>
