--- a/jequiti.html
+++ b/jequiti.html
@@ -15,8 +15,8 @@
             <div id="boxFecharMenu"><img src="https://cdn-icons-png.flaticon.com/512/7693/7693513.png" width="20%" onclick="menuClose()"></div>
             <a href="./jequiti.html">Principal</a>
             <a href="./subpagina_jequiti/Colonia.html">Colonia</a>
-            <a href="./subpagina_jequiti/maqui_acess.html">Maquiagem e Acessórios</a>
-          <!--  <a href="">Bijuterias</a>-->
+           <!-- <a href="./subpagina_jequiti/maqui_acess.html">Maquiagem e Acessórios</a>
+            <a href="">Bijuterias</a>-->
         </div>
         
         <h1>Jequiti</h1>
